cross_toolchain/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:18:08 **** Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/SocketServer.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SocketServer.d" -MT"src/SocketServer.o" -o "src/SocketServer.o" "../src/SocketServer.cpp"
Finished building: ../src/SocketServer.cpp
 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
Finished building: ../src/server_main.cpp
 
Building target: server_conn
Invoking: Cross G++ Linker
g++  -o "server_conn"  ./src/SocketServer.o ./src/server_main.o   
Finished building target: server_conn
 
21:24:43 **** Incremental Build of configuration Debug for project keypad_interface ****
make all 
Building file: ../src/SocketClient.cpp
Invoking: Cross G++ Compiler
arm-linux-gnueabihf-g++ -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/arm-linux-gnueabihf/include/c++/4.9.3/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/SocketClient.d" -MT"src/SocketClient.o" -o "src/SocketClient.o" "../src/SocketClient.cpp"
Finished building: ../src/SocketClient.cpp
 
Building file: ../src/client.cpp
Invoking: Cross G++ Compiler
arm-linux-gnueabihf-g++ -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/arm-linux-gnueabihf/include/c++/4.9.3/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/client.d" -MT"src/client.o" -o "src/client.o" "../src/client.cpp"
Finished building: ../src/client.cpp
 
Building file: ../src/piHiPri.c
Invoking: Cross GCC Compiler
arm-linux-gnueabihf-gcc -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/piHiPri.d" -MT"src/piHiPri.o" -o "src/piHiPri.o" "../src/piHiPri.c"
Finished building: ../src/piHiPri.c
 
Building file: ../src/softPwm.c
Invoking: Cross GCC Compiler
arm-linux-gnueabihf-gcc -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/softPwm.d" -MT"src/softPwm.o" -o "src/softPwm.o" "../src/softPwm.c"
Finished building: ../src/softPwm.c
 
Building file: ../src/softTone.c
Invoking: Cross GCC Compiler
arm-linux-gnueabihf-gcc -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/softTone.d" -MT"src/softTone.o" -o "src/softTone.o" "../src/softTone.c"
Finished building: ../src/softTone.c
 
Building file: ../src/wiringPi.c
Invoking: Cross GCC Compiler
arm-linux-gnueabihf-gcc -I/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/wiringPi.d" -MT"src/wiringPi.o" -o "src/wiringPi.o" "../src/wiringPi.c"
Finished building: ../src/wiringPi.c
 
Building target: keypad_interface
Invoking: Cross G++ Linker
arm-linux-gnueabihf-g++ -L/home/devil/Documents/tools/arm-bcm2708/arm-linux-gnueabihf/. -o "keypad_interface"  ./src/SocketClient.o ./src/client.o ./src/piHiPri.o ./src/softPwm.o ./src/softTone.o ./src/wiringPi.o   -lpthread
Finished building target: keypad_interface
 
make --no-print-directory post-build
scp keypad_interface pi@dex.local:/home/pi/client_conn
ssh: Could not resolve hostname dex.local: Name or service not known
lost connection
makefile:58: recipe for target 'post-build' failed
make[1]: [post-build] Error 1 (ignored)
 
21:24:54 **** Incremental Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
../src/server_main.cpp: In function ‘int main(int, char**)’:
../src/server_main.cpp:191:30: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
src/subdir.mk:21: recipe for target 'src/server_main.o' failed
 string i[2][2] = {{1,2},{3,4}};
                              ^
../src/server_main.cpp:191:30: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
../src/server_main.cpp:191:30: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
../src/server_main.cpp:191:30: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
make: *** [src/server_main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
21:25:25 **** Incremental Build of configuration Debug for project keypad_interface ****
make all 
make: Nothing to be done for 'all'.
21:25:25 **** Incremental Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
../src/server_main.cpp: In function ‘int main(int, char**)’:
../src/server_main.cpp:191:33: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
 string test[2][2] = {{1,2},{3,4}};
                                 ^
../src/server_main.cpp:191:33: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
../src/server_main.cpp:191:33: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
../src/server_main.cpp:191:33: error: conversion from ‘int’ to non-scalar type ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ requested
src/subdir.mk:21: recipe for target 'src/server_main.o' failed
make: *** [src/server_main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
21:25:48 **** Incremental Build of configuration Debug for project keypad_interface ****
make all 
make: Nothing to be done for 'all'.
21:25:48 **** Incremental Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
Finished building: ../src/server_main.cpp
 
Building target: server_conn
Invoking: Cross G++ Linker
g++  -o "server_conn"  ./src/SocketServer.o ./src/server_main.o   
Finished building target: server_conn
 
21:26:11 **** Incremental Build of configuration Debug for project keypad_interface ****
make all 
make: Nothing to be done for 'all'.
21:26:11 **** Incremental Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
Finished building: ../src/server_main.cpp
 
Building target: server_conn
Invoking: Cross G++ Linker
g++  -o "server_conn"  ./src/SocketServer.o ./src/server_main.o   
Finished building target: server_conn
 
21:28:43 **** Incremental Build of configuration Debug for project keypad_interface ****
make all 
make: Nothing to be done for 'all'.
21:28:44 **** Incremental Build of configuration Debug for project server_conn ****
make all 
Building file: ../src/server_main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/server_main.d" -MT"src/server_main.o" -o "src/server_main.o" "../src/server_main.cpp"
Finished building: ../src/server_main.cpp
 
Building target: server_conn
Invoking: Cross G++ Linker
g++  -o "server_conn"  ./src/SocketServer.o ./src/server_main.o   
Finished building target: server_conn
 
